src/map.css
#content {
    margin-left: -1rem;
    margin-right: -1rem;
    margin-bottom: -1rem;
    width: 80vh;
}

.leaflet-shadow-pane img, .leaflet-marker-pane img {
    border: initial;
    border-bottom-left-radius: initial;
    border-bottom-right-radius: initial;
    border-top-left-radius: initial;
    border-top-right-radius: initial;
}

.full-width {
    width: 100%;
}

@media only screen and (max-width: 480px) {
    .paper {
        padding-left: 0.4rem;
        padding-right: 0.4rem;
    }
}

